<resources>
    <string name="app_name">meteoapp</string>
    <!--    Title String   -->
    <string name="palermo_sic">%s, %s</string>

    <!--    Subtitle String  -->
    <string name="next_five_days">%s</string>
    <!-- Forecast_item_Strings -->
    <string name="tv_today">Today</string>
    <string name="tv_grade_min">%d\u00B0</string>
    <string name="tv_grade_max">%d\u00B0</string>
    <string name="tv_kmh">%d km/h</string>
    <string name="tv_min">min</string>
    <string name="tv_max">max</string>
    <string name="tv_precip">Precip</string>
    <string name="tv_wind">wind</string>
    <string name="tv_date">%d/%d</string>
    <string name="tv_precip_num">%d%%</string>
    <string name="icon_holder">Icon Holder</string>
    <!--  Bottom_nav_Strings -->
    <string name="icon_home">Home</string>
    <string name="icon_today">Today</string>
    <string name="icon_tomorrow">Tomorrow</string>
    <string name="icon_date">11</string>
    <!--  Fragment today strings  -->
    <string name="tv_today_fragment">Today Fragment</string>
    <!--  Fragment today strings  -->
    <string name="tv_tomorrow_fragment">Tomorrow Fragment</string>
    <!--  Specific day strings  -->
    <string name="specificDay_humidity">Humidity</string>
    <string name="specificDay_hour_second">%d:00</string>
    <string name="specificDay_wind_speed">%d</string>
    <string name="specificDay_coverage_percent">%d%%</string>
    <string name="specificDay_rain_mm">%d mm</string>
    <string name="specificDay_hourly_date">%d/%d</string>
    <string name="specificDay_precipitation_grade">%d </string>
    <string name="specificDay_uv_index">UV index</string>
    <string name="specificDay_precipitation">precipitation</string>
    <string name="specificDay_humidity_percent">%d</string>
    <string name="specificDay_date">%d / %d / %d</string>
    <string name="specificDay_situation">%s</string>
    <string name="SpecificDay_grade">%d\u00B0</string>
    <string name="humidityDegree">0%</string>
    <string name="degree">11</string>
    <string name="specificDay_hum_grade">%d</string>
    <string name="specificDay_coverage">Coverage</string>
    <string name="specificDay_rain">Rain</string>
    <string name="specific_day_wind_speed">Wind</string>
    <string name="specificDay_uvIndex">%d</string>
    <!--  Fragment tomorrow strings  -->
    <string name="uv_index">%d</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_grade">%d</string>
    <string name="date">1/10</string>
    <string name="humidity">Humidity</string>
    <string name="tom_hum_grade">%d</string>
    <string name="wind_speed">NNE %d km/h</string>
    <string name="tom_coverage">Coverage</string>
    <string name="tom_rain">Rain</string>
    <string name="coverage_percent">%d</string>
    <string name="rain_mm">%d mm</string>
    <string name="tom_text_date">Tomorrow,\nMonday 11 September</string>
    <string name="clear">Clear</string>
    <string name="hour">%d:00</string>
    <string name="tom_grade">%d\u00B0</string>
    <string name="humidity_percent">%d%%</string>

    <!--    today fragment string-->
    <!--today header string-->
    <string name="td_palermo_sic">%s ,%s</string>
    <string name="td_text_date">Today</string>
    <string name="td_Info">%s</string>
    <!--    today view strings -->
    <string name="td_hour">11:00</string>
    <string name="td_icon_sun">td_icon_sun</string>
    <string name="td_grade">31°</string>
    <string name="td_icon_drop">td_icon_drop</string>
    <string name="td_humidity_percent">0%</string>
    <string name="precipitation_td">Felt</string>
    <string name="td_uv_index">UV Index</string>
    <string name="td_precipitation_grade">%d</string>
    <string name="td_index">%s</string>
    <string name="td_humidity">Humidity</string>
    <string name="tv_td_wind">Wind</string>
    <string name="td_hum_grade">%d</string>
    <string name="wind_speed_td">SSE 7km/h</string>
    <string name="td_coverage">Coverage</string>
    <string name="td_rain">Rain</string>
    <string name="coverage_percent_td">%d</string>
    <string name="rain_mm_td">%d</string>
    <!--    today hourly item-->
    <string name="td2_hour">%d</string>
    <string name="td2_icon_holder">sun</string>
    <string name="td2_grade">%d</string>
    <string name="td_icon_holder">td_icon_holder</string>
    <string name="td2_humidity_percent">%d</string>



</resources>