<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/today_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/forecast_layout_height"
    android:layout_marginHorizontal="@dimen/forecast_layout_marginHorizontal"
    android:layout_marginTop="@dimen/forecast_layout_marginTop"
    android:elevation="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/bg_forecast_shape">

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_days_marginStart"
        android:layout_marginTop="@dimen/forecast_days_marginTop"
        android:text="@string/tv_today"
        android:textColor="@color/white"
        android:textSize="@dimen/forecast_days_textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_grade_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_gradeMin_marginStart"
        android:layout_marginTop="@dimen/forecast_gradeMin_marginTop"
        android:text="@string/tv_grade_min"
        android:textColor="@color/white"
        android:textSize="@dimen/big_textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_grade_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_gradeMax_marginStart"
        android:layout_marginTop="@dimen/forecast_gradeMax_marginTop"
        android:text="@string/tv_grade_max"
        android:textColor="@color/white"
        android:textSize="@dimen/big_textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_precipitation_marginStart"
        android:layout_marginTop="@dimen/forecast_precipitation_marginTop"
        android:text="@string/tv_precip_num"
        android:textColor="@color/white"
        android:textSize="@dimen/big_textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_speed_marginStart"
        android:layout_marginTop="@dimen/forecast_speed_marginTop"
        android:text="@string/tv_kmh"
        android:textColor="@color/white"
        android:textSize="@dimen/big_textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_min_marginStart"
        android:layout_marginTop="@dimen/forecast_min_marginTop"
        android:text="@string/tv_min"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_max_marginStart"
        android:layout_marginTop="@dimen/forecast_max_marginTop"
        android:text="@string/tv_max"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_precipitation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_precipitationTxt_marginStart"
        android:layout_marginTop="@dimen/forecast_precipitationTxt_marginTop"
        android:text="@string/tv_precip"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_windTxt_marginStart"
        android:layout_marginTop="@dimen/forecast_windTxt_marginTop"
        android:text="@string/tv_wind"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_date_marginStart"
        android:layout_marginTop="@dimen/forecast_date_marginTop"
        android:text="@string/tv_date"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_cloudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/forecast_icon_marginStart"
        android:layout_marginTop="@dimen/forecast_icon_marginTop"
        android:contentDescription="@string/icon_holder"
        android:src="@drawable/ic_sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>